2014-October-19 Struan Robertson

	* CollisionOperator.cpp/.h: Added implementation of method to calculate
	equilibrium fractions for systems with a second order reaction.
	
	* ThermodynamicTable.cpp: ALtered so that enthalpy is measured relative to 
	298.15 K value, to allow comparison with JANAF tables.	 

	* Documentation: Content added regarding refReaction keyword.

2014-September-27 Struan Robertson

	* examples/Methyl_H_to_Methane: Added two test files (used in the 
	investigation of back reaction effects). 

2014-September-26 Robin Shannon

	* examples/Methyl_H_to_Methane/Methyl_H_to_Methane_ftst.xml: Restore previous 
	version of file

2014-September-25 Robin Shannon

	* src/MesmerMath.cpp, MesmerMath.cpp, TMatrix.h: Addition of cholesky 
	decomposition and inverse cumulative distribution methods.

	* src/plugins/FittingUtils.cpp, FittingUtils.h, Marquardt.cpp: Printing 
	correlated distribution from fitting marquardt fitting in xml output. 

2014-September-11 Chris Morley

	* src/MolecularComponents.cpp, defaults.xml: remove default ZPE and do
	not require sink products to have a value of ZPE and some other
	properties (unless ILT or some tunnelling).

	* src/BimolecularSinkReaction.cpp,src/IrreversibleExchangeReaction.cpp,
	src/IrreversibleUnimolecularReaction.cpp, src/MicroRate.cpp,mesmer1.xsd:
	No output of reverse canonical rates and Keq if no product energy.

	src/plugins/UnitTests.cpp: ensure DOS is actually calculated when
	calling getCellDensityOfStates().

2014-September-7 Struan Robertson

	* MolecularComponents.cpp/.h, CollisionOperator.cpp/.h, Reaction classes
	and the addition of gWellProperties.h/.cpp: Moved well properties out to
	own set of files as	the template structure was causing build problems on 
	Linux.

	* Updated Linux64 baselines.

2014-September-7 Struan Robertson

	* MolecularComponents.cpp/.h, CollisionOperator.cpp/.h, System.cpp: Changes 
	to allow matrix construction to be done at the specified precision.
